2010-10-21  Evan Martin  <evan@chromium.org>

Reviewed by Tony Chang.

        sqlite: show extended error codes in error logs
        https://bugs.webkit.org/show_bug.cgi?id=47859

        SQLite can provide "extended" error codes, where extra information
        about the error is potentially encoded in the high bits of the error
        code.  It's only off by default in case older apps rely on equality
        testing on the older error codes, which WebKit doesn't do.

        * platform/sql/SQLiteDatabase.cpp:
        (WebCore::SQLiteDatabase::open):
        * platform/sql/SQLiteStatement.cpp:
        (WebCore::SQLiteStatement::step):

Canonical link: https://commits.webkit.org/60770@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70219 268f45cc-cd09-0410-ab3c-d52691b4dbfc